--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>登录</title>
     <link
+      rel="icon"
+      href="{{ url_for('static', filename='images/book1.png') }}"
+      type="image/png"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/style_login.css') }}"
     />
@@ -15,6 +20,11 @@
     </style>
   </head>
   <body>
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <div class="error-popup">
+      {% for message in messages %} {{ message }} {% endfor %}
+    </div>
+    {% endif %} {% endwith %}
     <section>
       <div class="color"></div>
       <div class="color"></div>
